--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,5 +1,5 @@
 {
-	"revision": 70,
+	"revision": 73,
 	"lat_lon": {
 		"atl": [ 33.76, -84.39 ],
 		"bom": [ 18.58, 72.49 ],
@@ -100,6 +100,11 @@
 				"155.133.247.0-155.133.247.255"
 			]
 		},
+                "pwt": {
+			"address_ranges": [
+				"125.39.181.0/24"
+			]
+		},
 		"scl": {
 			"address_ranges": [
 				"155.133.249.0-155.133.249.255"
@@ -130,7 +135,7 @@
 		},
 		"vie": {
 			"address_ranges": [
-				"146.66.155.0-146.66.155.191",
+				"155.133.228.0-155.133.228.255",
 				"185.25.182.0-185.25.182.191"
 			]
 		}
@@ -276,7 +281,10 @@
 		"vie": {
 			"addresses": [
 				"185.25.182.225:27015-27050",
-				"185.25.182.226:27015-27050"
+				"185.25.182.226:27015-27050",
+				"146.66.155.50:27015-27050",
+				"146.66.155.51:27015-27050",
+				"146.66.155.52:27015-27050"
 			]
 		},
 		"bom": {
@@ -315,9 +323,10 @@
 			"ping_only": true,
 			"partners": 2,
 			"addresses": [
-				"218.78.184.11:27015-27016",
-				"218.78.184.12:27015-27016",
-				"218.78.184.13:27015-27016"
+				"218.78.184.178:27015-27050",
+				"218.78.184.179:27015-27050",
+				"218.78.184.180:27015-27050",
+				"218.78.184.181:27015-27050"
 			]
 		},
 		"pwg": {
