3833195 | 91 files | M  hl2/resource/gameui_bulgarian.txt, M  hl2/resource/gameui_danish.txt, M  hl2/resource/gameui_dutch.txt, M  hl2/resource/gameui_finnish.txt, M  hl2/resource/gameui_german.txt, M  hl2/resource/gameui_greek.txt, M  hl2/resource/gameui_hungarian.txt, M  hl2/resource/gameui_italian.txt, M  hl2/resource/gameui_japanese.txt, M  hl2/resource/gameui_korean.txt, M  hl2/resource/gameui_koreana.txt, M  hl2/resource/gameui_norwegian.txt, M  hl2/resource/gameui_polish.txt, M  hl2/resource/gameui_portuguese.txt, M  hl2/resource/gameui_romanian.txt, M  hl2/resource/gameui_russian.txt, M  hl2/resource/gameui_schinese.txt, M  hl2/resource/gameui_spanish.txt, M  hl2/resource/gameui_swedish.txt, M  hl2/resource/gameui_tchinese.txt, M  hl2/resource/gameui_thai.txt, M  hl2/resource/gameui_turkish.txt, M  hl2/resource/gameui_ukrainian.txt, M  hl2/resource/hl2_german.txt, M  hl2/resource/hl2_greek.txt, M  hl2/resource/hl2_hungarian.txt, M  hl2/resource/hl2_norwegian.txt, M  hl2/resource/hl2_polish.txt, M  hl2/resource/hl2_romania

--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,5 +1,5 @@
 {
-	"revision": 91,
+	"revision": 100,
 	"lat_lon": {
 		"atl": [ 33.76, -84.39 ],
 		"bom": [ 18.58, 72.49 ],
@@ -66,7 +66,7 @@
 		},
 		"gru": {
 			"address_ranges": [
-                                "155.133.224.0-155.133.225.255",
+				"155.133.224.0-155.133.225.255",
 				"205.185.194.0-205.185.194.191"
 			]
 		},
@@ -107,6 +107,11 @@
 				"155.133.247.0-155.133.247.255"
 			]
 		},
+		"ord": {
+			"address_ranges": [
+				"208.78.167.0-208.78.167.255"
+			]
+		},
 		"scl": {
 			"address_ranges": [
 				"155.133.249.0-155.133.249.255"
@@ -127,8 +132,8 @@
 		},
 		"syd": {
 			"address_ranges": [
-                                "103.10.125.0-103.10.125.191",
-                                "155.133.227.0-155.133.227.225"
+				"103.10.125.0-103.10.125.191",
+				"155.133.227.0-155.133.227.225"
 			]
 		},
 		"tyo": {
@@ -201,6 +206,10 @@
 		},
 		"fra": {
 			"addresses": [
+				"162.254.197.226:27015-27050",
+				"162.254.197.227:27015-27050",
+				"162.254.197.228:27015-27050",
+				"162.254.197.229:27015-27050",
 				"162.254.197.70:27015-27050",
 				"162.254.197.71:27015-27050",
 				"162.254.197.72:27015-27050",
@@ -309,6 +318,14 @@
 				"162.254.198.103:27015-27050"
 			]
 		},
+		"sto2": {
+			"addresses": [
+				"155.133.252.34:27015-27050",
+                                "155.133.252.35:27015-27050",
+                                "155.133.252.50:27015-27050",
+                                "155.133.252.51:27015-27050"
+			]
+		},
 		"tuk": {
 			"addresses": [
 				"208.64.200.252:27015-27050"
@@ -345,6 +362,15 @@
 				"152.111.192.244:27015-27016"
 			]
 		},
+		"jhb": {
+			"ping_only": true,
+			"addresses": [
+				"197.80.200.51:27015-27016",
+				"197.80.200.52:27015-27016",
+				"196.38.180.20:27015-27016",
+				"196.38.180.21:27015-27016"
+			]
+		},
 		"lim": {
 			"addresses": [
 				"190.217.33.34:27015-27050",
@@ -363,11 +389,25 @@
 				"103.10.125.154:27015-27050"
 			]
 		},
-		"tsn": {
+		"tsnu": {
 			"partners": 2,
 			"addresses": [
-				"125.39.181.11:27015-27050",
-				"125.39.181.12:27015-27050"
+				"125.39.181.11:27015-27070",
+				"125.39.181.12:27015-27070"
+			]
+		},
+		"tsnt": {
+			"partners": 2,
+			"addresses": [
+                                "119.90.27.13:27015-27070",
+                                "119.90.27.14:27015-27070"
+			]
+		},
+		"tsnm": {
+			"partners": 2,
+			"addresses": [
+                                "117.131.203.15:27015-27070",
+                                "117.131.203.16:27015-27070"
 			]
 		},
 		"pwt": {
