--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,14 +1,14 @@
 {
-	"revision": 108,
+	"revision": 113,
 	"lat_lon": {
 		"atl": [ 33.76, -84.39 ],
 		"bom": [ 18.58, 72.49 ],
 		"can": [ 23.7, 113.15 ],
-		"cpt": [ -33.93, 18.42 ],
 		"dxb": [ 25.25, 55.30 ],
 		"eat": [ 47.61, -122.17 ],
 		"iad": [ 39.01, -77.43 ],
 		"gru": [ -23.53, -46.64 ],
+		"jnb": [ -33.05, 18.42 ],
 		"lax": [ 34.05, -118.25 ],
 		"lim": [ -12.06, -77.05 ],
 		"lux": [ 52.52, 13.41 ],
@@ -41,26 +41,13 @@
 		},
 		"bom": {
 			"address_ranges": [
-				"155.133.233.11-155.133.233.25"
+				"155.133.233.11-155.133.233.40"
 			]
 		},
 		"can": {
 			"partners": 2,
 			"address_ranges": [
 				"125.88.174.0/24"
-			]
-		},
-		"cpt": {
-			"address_ranges": [
-				"152.111.192.243-152.111.192.244",
-				"197.84.209.20-197.84.209.23"
-			]
-		},
-		"jhb": {
-			"address_ranges": [
-				"196.28.69.109-196.28.69.109",
-				"196.38.180.17-196.38.180.22",
-				"197.80.200.51-197.80.200.53"
 			]
 		},
 		"dxb": {
@@ -87,6 +74,11 @@
 		"iad": {
 			"address_ranges": [
 				"208.78.164.0-208.78.166.191"
+			]
+		},
+		"jnb": {
+			"address_ranges": [
+				"155.133.238.0/25"
 			]
 		},
 		"lax": {
@@ -315,7 +307,7 @@
 		},
 		"maa": {
 			"addresses": [
-				"155.133.232.34:27015-27050"
+				"155.133.232.98:27015-27050"
 			]
 		},
 		"mad": {
@@ -426,23 +418,8 @@
 		},
 		"bom": {
 			"addresses": [
-				"155.133.233.34:27015-27050"
-			]
-		},
-		"cpt": {
-			"ping_only": true,
-			"addresses": [
-				"152.111.192.243:27015-27016",
-				"152.111.192.244:27015-27016"
-			]
-		},
-		"jhb": {
-			"ping_only": true,
-			"addresses": [
-				"197.80.200.51:27015-27016",
-				"197.80.200.52:27015-27016",
-				"196.38.180.20:27015-27016",
-				"196.38.180.21:27015-27016"
+				"155.133.233.98:27015-27050",
+				"155.133.233.99:27015-27050"
 			]
 		},
 		"lim": {
