--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,5 +1,5 @@
 {
-	"revision": 116,
+	"revision": 123,
 	"lat_lon": {
 		"atl": [ 33.76, -84.39 ],
 		"bom": [ 18.58, 72.49 ],
@@ -15,6 +15,7 @@
 		"maa": [ 13.08, 80.27 ],
 		"mad": [ 40.23, 3.34 ],
 		"man": [ 14.35, 120.59 ],
+		"mwh": [ 47.03, -119.42 ],
 		"okc": [ 35.48, -97.53 ],
 		"hkg": [ 22.31, 113.92 ],
 		"icn": [ 37.57, 126.98 ],
@@ -58,7 +59,8 @@
 		},
 		"eat": {
 			"address_ranges": [
-				"192.69.96.0-192.69.97.255"
+				"192.69.96.0-192.69.97.255",
+				"208.78.166.129-208.78.166.142"
 			]
 		},
 		"gru": {
@@ -74,7 +76,7 @@
 		},
 		"iad": {
 			"address_ranges": [
-				"208.78.164.0-208.78.166.191"
+				"208.78.164.0-208.78.165.240"
 			]
 		},
 		"jnb": {
@@ -244,12 +246,6 @@
 				"185.25.183.18:27015-27050"
 			]
 		},
-		"eat": {
-			"addresses": [
-				"192.69.97.250:27015-27050",
-				"192.69.97.251:27015-27050"
-			]
-		},
 		"fra": {
 			"addresses": [
 				"162.254.197.162:27015-27050",
@@ -334,8 +330,13 @@
 				"155.133.253.19:27015-27050"
 			]
 		},
+		"mwh": {
+			"addresses": [
+				"155.133.235.9:27015-27050",
+				"155.133.235.10:27015-27050"
+			]
+		},
 		"okc": {
-			"ping_only": true,
 			"addresses": [
 				"155.133.254.130:27015-27050",
 				"155.133.254.131:27015-27050"
