--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,5 +1,5 @@
 {
-	"revision": 133,
+	"revision": 134,
 	"lat_lon": {
 		"atl": [ 33.76, -84.39 ],
 		"bom": [ 18.58, 72.49 ],
@@ -169,7 +169,10 @@
 		},
 		"pwt": {
 			"partners": 2,
-			"address_ranges": [ "121.46.228.0/24" ]
+			"address_ranges": [
+				"121.46.228.0/24",
+				"221.228.192.0/24"
+			]
 		},
 		"pwg": {
 			"partners": 2,
