4725564 | 36 files | M bin/engine.txt,  M bin/engine_strings.txt,  M platform/config/network_config.json,  M tf/bin/client.txt,  M tf/bin/client_strings.txt,  M tf/bin/server.txt,  M tf/bin/server_strings.txt,  M tf/resource/tf_brazilian.txt,  M tf/resource/tf_bulgarian.txt,  M tf/resource/tf_czech.txt,  M tf/resource/tf_danish.txt,  M tf/resource/tf_dutch.txt,  M tf/resource/tf_english.txt,  M tf/resource/tf_finnish.txt,  M tf/resource/tf_french.txt,  M tf/resource/tf_german.txt,  M tf/resource/tf_greek.txt,  M tf/resource/tf_norwegian.txt,  M tf/resource/tf_polish.txt,  M tf/resource/tf_portuguese.txt,  M tf/resource/tf_proto_obj_defs_polish.txt,  M tf/resource/tf_proto_obj_defs_romanian.txt,  M tf/resource/tf_proto_obj_defs_spanish.txt,  M tf/resource/tf_quests_polish.txt,  M tf/resource/tf_quests_romanian.txt,  M tf/resource/tf_quests_spanish.txt,  M tf/resource/tf_romanian.txt,  M tf/resource/tf_russian.txt,  M tf/resource/tf_spanish.txt,  M tf/resource/tf_tchinese.txt,  M tf/resource/tf_thai.txt,  M tf/resource/tf_ukrainian
https://steamdb.info/patchnotes/3146355/

--- a/platform/config/network_config.json
+++ b/platform/config/network_config.json
@@ -1,5 +1,5 @@
 {
-  "revision": 165,
+  "revision": 170,
   "pops": {
     "ams": {
       "desc": "Amsterdam",
@@ -103,8 +103,6 @@
         "162.254.197.165:27015-27068",
         "162.254.197.178:27015-27068",
         "162.254.197.179:27015-27068",
-        "162.254.197.180:27015-27068",
-        "162.254.197.181:27015-27068",
         "162.254.197.70:27015-27052",
         "162.254.197.71:27015-27052",
         "162.254.197.72:27015-27052",
@@ -144,10 +142,10 @@
       "desc": "Sterling",
       "geo": [ -77.43, 39.01 ],
       "relay_addresses": [
-        "162.254.192.66:27015-27052",
         "162.254.192.67:27015-27052",
         "162.254.192.82:27015-27052",
-        "162.254.192.83:27015-27052"
+        "162.254.192.83:27015-27052",
+        "162.254.192.99:27015-27068"
       ],
       "service_address_ranges": [
         "208.78.164.0/23"
@@ -226,8 +224,8 @@
       "relay_addresses": [
         "155.133.246.50:27015-27052",
         "155.133.246.34:27015-27052",
-        "155.133.246.66:27015-27060",
-        "155.133.246.67:27015-27060"
+        "155.133.246.66:27015-27068",
+        "155.133.246.67:27015-27068"
       ],
       "service_address_ranges": [
         "155.133.247.0/24"
@@ -369,7 +367,7 @@
       "geo": [ -122.33, 47.61 ],
       "relay_addresses": [
         "205.196.6.66:27015-27052",
-        "205.196.6.74:27015-27060"
+        "205.196.6.74:27015-27068"
       ]
     },
     "sgp": {
@@ -516,13 +514,6 @@
         "125.39.181.16:27015-27068"
       ]
     },
-    "tuk": {
-      "desc": "Tukwila",
-      "geo": [ -122.28, 47.48 ],
-      "relay_addresses": [
-        "208.64.200.252:27015-27052"
-      ]
-    },
     "tyo": {
       "desc": "Tokyo",
       "geo": [ 139.68, 35.68 ],
@@ -533,6 +524,14 @@
       ],
       "service_address_ranges": [
         "45.121.186.0/23"
+      ]
+    },
+    "tyo1": {
+      "desc": "Tokyo (TY2)",
+      "geo": [ 139.68, 35.68 ],
+      "relay_addresses": [
+         "155.133.245.34:27015-27068",
+         "155.133.245.35:27015-27068"
       ]
     },
     "vie": {
