6616932 | 98 files | M bin/GameUI.txt,  M bin/GameUI_strings.txt,  M bin/ServerBrowser.txt,  M bin/ServerBrowser_strings.txt,  M bin/bsppack.txt,  M bin/bsppack_strings.txt,  M bin/bugreporter_filequeue.txt,  M bin/bugreporter_filequeue_strings.txt,  M bin/datacache.txt,  M bin/datacache_strings.txt,  M bin/engine.txt,  M bin/engine_strings.txt,  M bin/filesystem_stdio.txt,  M bin/filesystem_stdio_strings.txt,  M bin/inputsystem.txt,  M bin/inputsystem_strings.txt,  M bin/launcher.txt,  M bin/launcher_strings.txt,  M bin/libtogl.txt,  M bin/libtogl_strings.txt,  M bin/libvstdlib.txt,  M bin/libvstdlib_strings.txt,  M bin/materialsystem.txt,  M bin/materialsystem_strings.txt,  M bin/replay.txt,  M bin/replay_strings.txt,  M bin/scenefilecache.txt,  M bin/scenefilecache_strings.txt,  M bin/shaderapidx9.txt,  M bin/shaderapidx9_strings.txt,  M bin/soundemittersystem.txt,  M bin/soundemittersystem_strings.txt,  M bin/sourcevr.txt,  M bin/sourcevr_strings.txt,  M bin/stdshader_dx9.txt,  M bin/stdshader_dx9_strings.txt,  M bin/studiore
https://steamdb.info/patchnotes/6907457/

--- a/tf/cfg/server_matchmaking_base.cfg
+++ b/tf/cfg/server_matchmaking_base.cfg
@@ -24,6 +24,7 @@ tf_ctf_bonus_time 10
 tf_flag_caps_per_round 3
 tf_bot_quota 0
 tf_bot_quota_mode normal
+tf_allow_player_name_change 0
 
 sv_minrate 3500
 sv_vote_issue_kick_min_connect_time_mvm 180
